Update and rename mirec.html to 2018-11-07-mirec.html

--- a/_posts/2018-11-07-mirec.html
+++ b/_posts/2018-11-07-mirec.html
@@ -1,4 +1,14 @@
-<!DOCTYPE html>
+---
+title: "Мировая экономика"
+layout: post
+excerpt_separator: "<!--more-->"
+tags:
+  - bayesian
+  - datacamp
+categories:
+  - Econometrics
+---
+ 
 <html>
 <head><meta charset="utf-8" />
 <title>МИРЭК</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
